--- a/style.css
+++ b/style.css
@@ -143,3 +143,112 @@ a:hover {
 }
 
 /* SECTIONS */
+section{
+    padding-top: 4vh;
+    height: 96vh;
+    margin: 0 10rem;
+    box-sizing: border-box;
+    min-height: fit-content;
+}
+
+.section-container{
+    display: flex;
+}
+
+/* PROFILE SECTION */
+#profile{
+    display: flex;
+    justify-content: center;
+    gap: 5rem;
+    height: 80vh;
+}
+
+.section__pic-container{
+    display: flex;
+    height: 400px;
+    width: 400px;
+    margin: auto 0;
+}
+
+.section__text{
+    align-self: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.section__text p {
+    font-weight: 600;
+}
+
+.section_text__p1 {
+    font-size: 1.75rem; 
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+}
+
+.section_text__p2 {
+    font-size: 1.75rem; 
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+}
+
+.title {
+    font-size: 3rem;
+    text-align: center;
+}
+
+#socials-container{
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+    gap: 1rem;
+}
+
+/* ICONS */
+.icon{
+    cursor: pointer;
+    height: 2rem; 
+}
+
+/* BUTTONS */
+.btn-container {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.btn {
+    font-weight: 600;
+    transition: all 300ms ease;
+    padding: 1rem;
+    width: 8rem;
+    border-radius: 2rem;
+}
+
+.btn-color-1 {
+    border: rgb(53, 53, 53) 0.1rem solid;
+    color: black;
+    background-color: white;
+}
+
+.btn-color-1:hover {
+    cursor: pointer;
+    background-color: black;
+    color: white;
+    border: rgb(0, 0, 0) 0.1rem solid;
+}
+
+.btn-color-2 {
+    border: rgb(53, 53, 53) 0.1rem solid;
+    background: none;
+    color: black;
+}
+
+.btn-color-2:hover {
+    cursor: pointer;
+    background-color: black;
+    color: white;
+    border: rgb(255, 255, 255) 0.1rem solid;
+}
