--- a/style.css
+++ b/style.css
@@ -264,6 +264,7 @@ section {
   border-radius: 2rem;
   border: rgb(53, 53, 53) 0.1rem solid;
   text-align: center;
+  margin-bottom: 2rem;
 }
 
 .section-container {
@@ -310,13 +311,14 @@ section {
   flex-wrap: wrap;
 }
 
-.details-container.color-container {
+.details-container .color-container {
   background: rgb(250, 250, 250);
   border-radius: 2rem;
   display: flex; 
   flex-direction: row; 
   align-items: center;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 2rem;
 }
 
 .project-left-section {
@@ -332,8 +334,7 @@ section {
   height: auto;
   display: block;
   object-fit: cover; 
-  border-radius: inherit;
-  margin-right: 20px;
+  border-radius: 2rem;
 }
 
 .project-info {
@@ -406,13 +407,14 @@ section {
 
 article {
   display: flex;
-  width: 10rem;
-  justify-content: space-around;
-  gap: 0.5rem;
+  align-items: center;
+  white-space: nowrap;
+  width: auto;
 }
 
 article .icon {
   cursor: default;
+  margin-right: 0.5rem;
 }
 
 /* CONTACT */
