--- a/style.css
+++ b/style.css
@@ -24,6 +24,15 @@ a, .btn {
 }
 
 /* DESKTOP NAVIGATION */
+#desktop-nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: white;
+  z-index: 100;
+}
+
 nav, .nav-links {
   display: flex;
 }
@@ -31,7 +40,7 @@ nav, .nav-links {
 nav {
   justify-content: space-around;
   align-items: center;
-  height: 17vh;
+  height: 12vh;
 }
 
 .nav-links {
@@ -61,9 +70,19 @@ a:hover {
   cursor: default;
 }
 
+body {
+  padding-top: 60px;
+}
+
 /* HAMBURGER MENU */
 #hamburger-nav {
   display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: white;
+  z-index: 100;
 }
 
 .hamburger-menu {
@@ -96,6 +115,8 @@ a:hover {
   max-height: 0;
   overflow: hidden;
   transition: all 0.3 ease-in-out;
+  border-radius: 2rem;
+
 }
 
 .menu-links a {
@@ -254,7 +275,7 @@ section {
 }
 
 .about-pic {
-  border-radius: 2rem;
+  border-radius: 2rem; 
 }
 
 .details-container {
@@ -264,7 +285,6 @@ section {
   border-radius: 2rem;
   border: rgb(53, 53, 53) 0.1rem solid;
   text-align: center;
-  margin-bottom: 2rem;
 }
 
 .section-container {
@@ -300,6 +320,14 @@ section {
   margin-right: 1rem;
 }
 
+.activities-img {
+  width: 200px;
+  height: 200px;
+  display: block;
+  object-fit: cover; 
+  border-radius: 2rem;
+}
+
 /* PROJECTS SECTION */
 #projects {
   position: relative;
@@ -319,6 +347,19 @@ section {
   align-items: center;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 2rem;
+}
+
+.project-card-container {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin-left: 20px;
+}
+
+.project-container
+{
+  display: flex;
+  align-items: center;
 }
 
 .project-left-section {
