--- a/style.css
+++ b/style.css
@@ -352,7 +352,7 @@ section {
 .project-card-container {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 70%;
   margin-left: 20px;
 }
 
@@ -360,6 +360,7 @@ section {
 {
   display: flex;
   align-items: center;
+  margin-bottom: 1rem;
 }
 
 .project-left-section {
@@ -371,8 +372,8 @@ section {
 }
 
 .project-img {
-  width: 40%;
-  height: auto;
+  width: 30%;
+  height: 150px;
   display: block;
   object-fit: cover; 
   border-radius: 2rem;
@@ -394,7 +395,7 @@ section {
 
 .project-description {
   color: rgb(85, 85, 85);
-  font-size: 1rem;
+  font-size: 0.9rem;
   margin-bottom: 1rem;
   line-height: 1.3;
   text-align: left;
